--- a/packages.yml
+++ b/packages.yml
@@ -2,3 +2,6 @@ packages:
 
   - package: fishtown-analytics/dbt_utils
     version: [">=0.6.0", "<0.7.0"]
+
+  - package: fivetran/shopify_source
+    version: 0.1.0
