--- a/models/shopify.yml
+++ b/models/shopify.yml
@@ -312,29 +312,29 @@ models:
   - name: shopify__product_variants
     description: Each record represents a product variant in Shopify
     columns:
-      - name: barcode	
+      - name: barcode
         description: The barcode, UPC, or ISBN number for the product.
-      - name: compare_at_price	
+      - name: compare_at_price
         description: The original price of the item before an adjustment or a sale.
       - name: created_timestamp
         description: The date and time (ISO 8601 format) when the product variant was created.
-      - name: fulfillment_service	
+      - name: fulfillment_service
         description: The fulfillment service associated with the product variant.
-      - name: grams	
+      - name: grams
         description: The weight of the product variant in grams.
-      - name: product_variant_id	
+      - name: variant_id
         description: The unique numeric identifier for the product variant.
         tests:
           - not_null
           - unique
-      - name: image_id	
+      - name: image_id
         description: The unique numeric identifier for a product's image. The image must be associated to the same product as the variant.
-      - name: inventory_item_id	
+      - name: inventory_item_id
         description: The unique identifier for the inventory item, which is used in the Inventory API to query for inventory information.
-      - name: inventory_management	
+      - name: inventory_management
         description: The fulfillment service that tracks the number of items in stock for the product variant.
-      - name: inventory_policy	
-        description: Whether customers are allowed to place an order for the product variant when it's out of stock. 
+      - name: inventory_policy
+        description: Whether customers are allowed to place an order for the product variant when it's out of stock.
       - name: inventory_quantity
         description: An aggregate of inventory across all locations. To adjust inventory at a specific location, use the InventoryLevel resource.
       - name: old_inventory_quantity
@@ -347,23 +347,24 @@ models:
         description: "The custom properties that a shop owner uses to define product variants. You can define three options for a product variant: option1, option2, option3."
       - name: position
         description: The order of the product variant in the list of product variants. The first position in the list is 1. The position of variants is indicated by the order in which they are listed.
-      - name: price	
+      - name: price
         description: The price of the product variant.
-      - name: product_id	
+      - name: product_id
         description: The unique numeric identifier for the product.
       - name: is_requiring_shipping
         description: This property is deprecated. Use the `requires_shipping` property on the InventoryItem resource instead.
-      - name: sku	
+      - name: sku
         description: A unique identifier for the product variant in the shop. Required in order to connect to a FulfillmentService.
-      - name: taxable	
+      - name: taxable
         description: Whether a tax is charged when the product variant is sold.
-      - name: tax_code	
+      - name: tax_code
         description: This parameter applies only to the stores that have the Avalara AvaTax app installed. Specifies the Avalara tax code for the product variant.
       - name: title
         description: The title of the product variant. The title field is a concatenation of the option1, option2, and option3 fields. You can only update title indirectly using the option fields.
       - name: updated_timestamp
         description: The date and time when the product variant was last modified. Gets returned in ISO 8601 format.
-      - name: weight	
+      - name: weight
         description: The weight of the product variant in the unit system specified with weight_unit.
-      - name: weight_unit	
+      - name: weight_unit
         description: "The unit of measurement that applies to the product variant's weight. If you don't specify a value for weight_unit, then the shop's default unit of measurement is applied. Valid values: g, kg, oz, and lb."
+        
