--- a/packages.yml
+++ b/packages.yml
@@ -1,4 +1,5 @@
 packages:
 
-  - package: fivetran/shopify_source
-    version: [">=0.2.0","<0.3.0"]
+  # - package: fivetran/shopify_source
+  #   version: [">=0.2.0","<0.3.0"]
+  - local: ../../dbt_shopify_source
