--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -73,6 +73,7 @@ seeds:
         id: "{%- if target.type == 'bigquery' -%} INT64 {%- else -%} bigint {%- endif -%}"
         order_id: "{%- if target.type == 'bigquery' -%} INT64 {%- else -%} bigint {%- endif -%}"
         refund_id: "{%- if target.type == 'bigquery' -%} INT64 {%- else -%} bigint {%- endif -%}"
+        receipt: "{{ 'varchar(100)' if target.name in ('redshift', 'postgres') else 'string' }}"
     shopify_refund_data:
       +column_types:
         id: "{%- if target.type == 'bigquery' -%} INT64 {%- else -%} bigint {%- endif -%}"
