--- a/packages.yml
+++ b/packages.yml
@@ -1,7 +1,7 @@
 packages:
 
   # - package: fivetran/shopify_source
-  #   version: [">=0.2.0","<0.3.0"]
+    version: [">=0.3.0","<0.4.0"]
   - git: https://github.com/fivetran/dbt_shopify_source.git
     revision: refund-transaction-updates
     warn-unpinned: false
