--- a/packages.yml
+++ b/packages.yml
@@ -1,4 +1,7 @@
 packages:
 
-  - package: fivetran/shopify_source
-    version: [">=0.3.0","<0.4.0"]
+  # - package: fivetran/shopify_source
+  #   version: [">=0.2.0","<0.3.0"]
+
+  - git: "https://github.com/fivetran/dbt_shopify_source"
+    revision: "example/unioned-data"
