Activity Stream models

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -23,6 +23,8 @@ vars:
     shopify_transaction:        "{{ ref('stg_shopify__transaction') }}"
     shopify_refund:             "{{ ref('stg_shopify__refund') }}"
     shopify_order_adjustment:   "{{ ref('stg_shopify__order_adjustment') }}"
+    shopify_checkout:           "{{ ref('stg_shopify__checkout') }}"
+    shopify_abandoned_checkout: "{{ ref('stg_shopify__abandoned_checkout') }}"
   
   dbt_utils_dispatch_list: [spark_utils, fivetran_utils]
   fivetran_utils_dispatch_list: [spark_utils]
