--- a/packages.yml
+++ b/packages.yml
@@ -1,4 +1,9 @@
 packages:
 
-  - package: fivetran/shopify_source
-    version: [">=0.3.0","<0.4.0"]
+  # - package: fivetran/shopify_source
+  #   version: [">=0.3.0","<0.4.0"]
+
+  # - local: ../shopify_source
+
+  - git: https://github.com/fivetran/dbt_shopify_source
+    revision: "feature/activity-stream"
