--- a/packages.yml
+++ b/packages.yml
@@ -1,7 +1,4 @@
 packages:
 
-  # - package: fivetran/shopify_source
-  #   version: [">=0.4.0","<0.5.0"]
-
-  - git: "https://github.com/fivetran/dbt_shopify_source"
-    warn-unpinned: false
+  - package: fivetran/shopify_source
+    version: [">=0.4.0","<0.5.0"]
