--- a/packages.yml
+++ b/packages.yml
@@ -1,3 +1,6 @@
 packages:
-  - package: fivetran/shopify_source
-    version: [">=0.5.0", "<0.6.0"]
+  # - package: fivetran/shopify_source
+  #   version: [">=0.5.0", "<0.6.0"]
+  - git: https://github.com/fivetran/dbt_shopify_source.git
+    revision: feature/deactivate-refunds
+    warn-unpinned: false
