--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,7 +1,7 @@
 name: 'shopify'
-version: '0.5.2'
+version: '0.6.0'
 config-version: 2
-require-dbt-version: [">=0.20.0"]
+require-dbt-version: [">=1.0.0", "<2.0.0"]
 models:
   shopify:
     +schema: shopify
