--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -6,15 +6,15 @@ config-version: 2
 
 vars:
   shopify_source:
-    customer_source:          "{{ ref('shopify_customer_data') }}"
-    order_line_refund_source: "{{ ref('shopify_order_line_refund_data') }}"
-    order_line_source:        "{{ ref('shopify_order_line_data') }}"
-    order_source:             "{{ ref('shopify_order_data') }}"
-    product_source:           "{{ ref('shopify_product_data') }}"
-    order_adjustment_source:  "{{ ref('shopify_order_adjustment_data') }}"
-    product_variant_source:   "{{ ref('shopify_product_variant_data') }}"
-    refund_source:            "{{ ref('shopify_refund_data') }}"
-    transaction_source:       "{{ ref('shopify_transaction_data') }}"
+    shopify_customer_source_identifier:          "shopify_customer_data"
+    shopify_order_line_refund_source_identifier: "shopify_order_line_refund_data"
+    shopify_order_line_source_identifier:        "shopify_order_line_data"
+    shopify_order_source_identifier:             "shopify_order_data"
+    shopify_product_source_identifier:           "shopify_product_data"
+    shopify_order_adjustment_source_identifier:  "shopify_order_adjustment_data"
+    shopify_product_variant_source_identifier:   "shopify_product_variant_data"
+    shopify_refund_source_identifier:            "shopify_refund_data"
+    shopify_transaction_source_identifier:       "shopify_transaction_data"
 
 dispatch:
   - macro_namespace: dbt_utils
