add schema var to integration test

--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -15,6 +15,8 @@ vars:
     shopify_product_variant_source_identifier:   "shopify_product_variant_data"
     shopify_refund_source_identifier:            "shopify_refund_data"
     shopify_transaction_source_identifier:       "shopify_transaction_data"
+    
+    shopify_schema: shopify_source_integration_tests
 
 dispatch:
   - macro_namespace: dbt_utils
