--- a/packages.yml
+++ b/packages.yml
@@ -1,3 +1,7 @@
 packages:
-- package: fivetran/shopify_source
-  version: [">=0.6.0", "<0.7.0"]
+# - package: fivetran/shopify_source
+#   version: [">=0.6.0", "<0.7.0"]
+
+  - git: https://github.com/fivetran/dbt_shopify_source.git
+    revision: test/fivetran_utils-0.3.6 
+    warn-unpinned: false
