--- a/packages.yml
+++ b/packages.yml
@@ -1,3 +1,7 @@
 packages:
-- package: fivetran/shopify_source
-  version: [">=0.6.0", "<0.7.0"]
+# - package: fivetran/shopify_source
+#   version: [">=0.7.0", "<0.8.0"]
+
+  - git: https://github.com/fivetran/dbt_shopify_source.git
+    revision: feature/package_updates
+    warn-unpinned: false
