--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -84,3 +84,54 @@ seeds:
         id: "{%- if target.type == 'bigquery' -%} INT64 {%- else -%} bigint {%- endif -%}"
         order_id: "{%- if target.type == 'bigquery' -%} INT64 {%- else -%} bigint {%- endif -%}"
         user_id: "{%- if target.type == 'bigquery' -%} INT64 {%- else -%} bigint {%- endif -%}"
+    shopify_abandoned_checkout_discount_code_data:
+      +column_types:
+        amount: float
+        created_at: timestamp
+        updated_at: timestamp
+    shopify_abandoned_checkout_data:
+      +column_types:
+        total_line_items_price: float
+        billing_address_phone: "{{ 'string' if target.type in ('bigquery', 'spark', 'databricks') else 'varchar' }}"
+        shipping_address_phone: "{{ 'string' if target.type in ('bigquery', 'spark', 'databricks') else 'varchar' }}"
+        closed_at: timestamp
+        created_at: timestamp
+        updated_at: timestamp
+    shopify_discount_code_data:
+      +column_types:
+        usage_count: float
+    shopify_order_discount_code_data:
+      +column_types:
+        amount: float
+    shopify_order_shipping_tax_line_data:
+      +column_types:
+        price: float
+    shopify_order_shipping_line_data:
+      +column_types:
+        discounted_price: float
+        price: float
+    shopify_price_rule_data:
+      +column_types:
+        prerequisite_subtotal_range: float
+        value: float
+    shopify_collection_data:
+      +column_types:
+        disjunctive: boolean
+        published_at: timestamp
+        updated_at: timestamp
+    shopify_metafield_data:
+      +column_types:
+        value_type: "{{ 'string' if target.type in ('bigquery', 'spark', 'databricks') else 'varchar' }}"
+        type: "{{ 'string' if target.type in ('bigquery', 'spark', 'databricks') else 'varchar' }}"
+    shopify_shop_data:
+      +column_types:
+        taxes_included: boolean
+        google_apps_login_enabled: boolean
+        county_taxes: boolean
+    shopify_inventory_level_data:
+      +column_types:
+        updated_at: timestamp
+    shopify_inventory_item_data:
+      +column_types:
+        updated_at: timestamp
+        created_at: timestamp
