--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -17,6 +17,30 @@ vars:
     shopify_refund_identifier:            "shopify_refund_data"
     shopify_transaction_identifier:       "shopify_transaction_data"
 
+  # will change these to identifiers later
+    abandoned_checkout_source: "{{ ref('shopify_abandoned_checkout_data') }}"
+    collection_product_source: "{{ ref('shopify_collection_product_data') }}"
+    collection_source: "{{ ref('shopify_collection_data') }}"
+    customer_tag_source: "{{ ref('shopify_customer_tag_data') }}"
+    discount_code_source: "{{ ref('shopify_discount_code_data') }}"
+    fulfillment_source: "{{ ref('shopify_fulfillment_data') }}"
+    inventory_item_source: "{{ ref('shopify_inventory_item_data') }}"
+    inventory_level_source: "{{ ref('shopify_inventory_level_data') }}"
+    location_source: "{{ ref('shopify_location_data') }}"
+    metafield_source: "{{ ref('shopify_metafield_data') }}"
+    order_note_attribute_source: "{{ ref('shopify_order_note_attribute_data') }}"
+    order_shipping_line_source: "{{ ref('shopify_order_shipping_line_data') }}"
+    order_shipping_tax_line_source: "{{ ref('shopify_order_shipping_tax_line_data') }}"
+    order_tag_source: "{{ ref('shopify_order_tag_data') }}"
+    order_url_tag_source: "{{ ref('shopify_order_url_tag_data') }}"
+    price_rule_source: "{{ ref('shopify_price_rule_data') }}"
+    product_image_source: "{{ ref('shopify_product_image_data') }}"
+    product_tag_source: "{{ ref('shopify_product_tag_data') }}"
+    shop_source: "{{ ref('shopify_shop_data') }}"
+    tender_transaction_source: "{{ ref('shopify_tender_transaction_data') }}"
+    abandoned_checkout_discount_code_source: "{{ ref('shopify_abandoned_checkout_discount_code_data') }}"
+    order_discount_code_source: "{{ ref('shopify_order_discount_code_data') }}"
+
 dispatch:
   - macro_namespace: dbt_utils
     search_order: ['spark_utils', 'dbt_utils']
