--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -10,6 +10,8 @@ models:
       +materialized: ephemeral
       shopify__customer_email_rollup:
         +materialized: view # so we can use the dbt_utils.star macro
+      shopify__inventory_level__aggregates:
+        +materialized: table # just for testing. remove later
 vars:
   shopify:
     shopify_customer: "{{ ref('stg_shopify__customer') }}"
