--- a/packages.yml
+++ b/packages.yml
@@ -3,7 +3,7 @@ packages:
 #   version: [">=0.7.0", "<0.8.0"]
 
   - git: https://github.com/fivetran/dbt_shopify_source.git
-    revision: feature/revamp/transform-enhancements
+    revision: feature/package-revamp
     warn-unpinned: false
 
 # - local: ../Shopify/dbt_shopify_source
